--- a/myapp/src/pages/home/home.html
+++ b/myapp/src/pages/home/home.html
@@ -1,14 +1,48 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      shoppie
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+
+  <ion-card>
+    <ion-card-content>
+      <ion-row text-center>
+        <ion-col col-3>
+          ลำดับ
+        </ion-col>
+        <ion-col col-7>
+          ชื่อ
+        </ion-col>
+        <ion-col col-2>
+          ราคา
+        </ion-col>
+      </ion-row>
+    </ion-card-content>
+  </ion-card>
+
+
+  <ion-list>
+    <ion-item *ngFor="let s of product; let i = index">
+      <ion-row text-center>
+        <ion-col col-3  >
+          {{ i+1 }}
+        </ion-col>
+        <ion-col col-6  >
+          {{ s.name }}
+        </ion-col>
+        <ion-col col-3  >
+          {{ s.price }}
+        </ion-col>
+      </ion-row>
+
+
+    </ion-item>
+  </ion-list>
+  <div padding>
+    <button ion-button block (click)=gocrealePage()>เพิ่มข้อมูล</button>
+  </div>
 </ion-content>
