--- a/myapp/src/pages/product/product.html
+++ b/myapp/src/pages/product/product.html
@@ -6,10 +6,28 @@
 -->
 <ion-header>
   <ion-navbar>
-    <ion-title>product</ion-title>
+    <ion-title>จักการสิ้นค้า</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
+  <!-- <form [formGroup]="newProduct" (ngSubmit)="createProduct()">
 
+    <ion-item>
+      <ion-label fixed>ชื่อสินค้า</ion-label>
+      <ion-input type="text" formControlName="productName"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label fixed>ราคา</ion-label>
+      <ion-input type="number" formControlName="price"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label fixed>รูปภาพ (URL)</ion-label>
+      <ion-input type="text" formControlName="pieces"></ion-input>
+    </ion-item>
+    
+    <div padding><button ion-button block type="submit" [disabled]="newProduct.invalid">เพิ่มรายการ</button></div>
+  </form> -->
 </ion-content>
