--- a/myapp/src/pages/home/home.html
+++ b/myapp/src/pages/home/home.html
@@ -11,14 +11,17 @@
   <ion-card>
     <ion-card-content>
       <ion-row text-center>
-        <ion-col col-3>
+        <ion-col col-2>
           ลำดับ
         </ion-col>
-        <ion-col col-7>
+        <ion-col col-6>
           ชื่อ
         </ion-col>
         <ion-col col-2>
           ราคา
+        </ion-col>
+        <ion-col col-2>
+
         </ion-col>
       </ion-row>
     </ion-card-content>
@@ -28,21 +31,27 @@
   <ion-list>
     <ion-item *ngFor="let s of product; let i = index">
       <ion-row text-center>
-        <ion-col col-3  >
+        <ion-col col-2>
           {{ i+1 }}
         </ion-col>
-        <ion-col col-6  >
+        <ion-col col-6>
           {{ s.name }}
         </ion-col>
-        <ion-col col-3  >
+        <ion-col col-2>
           {{ s.price }}
         </ion-col>
+
+        <ion-col col-2>
+          {{ s.ProfileImage }} 
+          <ion-item>
+            <ion-input type="number" placeholder="จำนวน"></ion-input>
+          </ion-item>
+        </ion-col>
+
       </ion-row>
-
-
     </ion-item>
   </ion-list>
-  <div padding>
+  <!-- <div padding>
     <button ion-button block (click)=gocrealePage()>เพิ่มข้อมูล</button>
-  </div>
+  </div> -->
 </ion-content>
